--- a/packages/ui/public/cairo.html
+++ b/packages/ui/public/cairo.html
@@ -44,6 +44,7 @@
       <img src="/logo.svg" alt="OpenZeppelin" width="300px">
       <a class="switch switch-solidity switch-off" href="/">Solidity Wizard</a>
       <a class="switch switch-cairo" href="#">Cairo Wizard</a>
+      <a class="switch switch-stylus switch-off" href="/stylus">Stylus Wizard</a>
     </div>
     <div class="flex flex-row">
       <a class="link" href="https://forum.openzeppelin.com/" target="_blank" rel="noopener noreferrer">Forum</a>
