--- a/packages/ui/public/index.html
+++ b/packages/ui/public/index.html
@@ -76,6 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <img src="/logo.svg" alt="OpenZeppelin" width="300px">
       <a class="switch switch-solidity" href="#">Solidity Wizard</a>
       <a class="switch switch-cairo switch-off" href="/cairo">Cairo Wizard</a>
+      <a class="switch switch-stylus switch-off" href="/stylus">Stylus Wizard</a>
     </div>
     <div class="flex flex-row items-center">
       <a class="link" href="https://forum.openzeppelin.com/" target="_blank" rel="noopener noreferrer">Forum</a>
